# cv-rag

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/api/routes/: documents.py  query.py  summary.py
app/api/schemas/: document.py  query.py  summary.py
app/chunking/: chunker.py  language_detector.py  section_detector.py
app/db/: models.py  session.py
app/parsing/: base.py  dispatcher.py  docx_parser.py  md_parser.py  pdf_parser.py
app/services/: ingestion_service.py  llm_client.py  query_service.py  summary_service.py
docs/: Design_API_Endpoints.md  Design_Parsing_Chunking_CV_Bilingual.md  PRD_RAG_CV_Summarization.md
scripts/: init_db.sql
tests/: test_section_detector.py
