[tool.poetry]
name = "cv-rag-poc"
version = "0.1.0"
description = "RAG system for CV summarization (HRD) - POC"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"

# Parsing
pdfplumber = "^0.11.0"
pypdf = "^4.3.0"
python-docx = "^1.1.0"
pytesseract = "^0.3.10"
pdf2image = "^1.17.0"

# Language detection
langdetect = "^1.0.9"

# DB / pgvector
sqlalchemy = { extras = ["asyncio"], version = "^2.0.32" }
asyncpg = "^0.29.0"
pgvector = "^0.3.2"
alembic = "^1.13.2"

# Tokenizing (untuk hitung token saat chunking)
tiktoken = "^0.7.0"

httpx = "^0.27.0"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.0"
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
